--- a/app/src/main/res/layout/activity_employee_part.xml
+++ b/app/src/main/res/layout/activity_employee_part.xml
@@ -71,7 +71,7 @@
         android:layout_marginEnd="35dp"
         android:backgroundTint="#03A9F4"
         android:onClick="Manage_nutritionP"
-        android:text=" manage nutrition programs"
+        android:text="Our nutrition programs"
         android:textSize="16dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
