--- a/app/src/main/res/layout/activity_updateworkouts_s.xml
+++ b/app/src/main/res/layout/activity_updateworkouts_s.xml
@@ -7,16 +7,16 @@
     android:orientation="vertical"
     android:layout_height="match_parent"
     android:padding="8dp"
-    tools:context=".UpdateOffers">
+    tools:context=".UpdateworkoutsS">
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="serif"
-        android:text="Update MemberShip Information"
+        android:text="Update schedule Information"
         android:textAlignment="center"
-        android:textColor="#FF9800"
+        android:textColor="#03A9F4"
         android:textSize="20sp"
         android:textStyle="bold" />
 
@@ -30,7 +30,7 @@
             android:layout_width="243dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Enter Offer name to update its information "
+            android:text="Enter schedule name to update its information "
             android:textColor="#2196F3"
             android:textSize="20sp" />
 
@@ -40,7 +40,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:ems="3"
-            android:hint="Offer Name"
+            android:hint="name"
             tools:ignore="TouchTargetSizeCheck" />
     </LinearLayout>
 
@@ -50,23 +50,14 @@
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
         android:ems="10"
-        android:hint="Offer Validity"
-        tools:ignore="TouchTargetSizeCheck" />
-
-    <EditText
-        android:id="@+id/edtPagesu4"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:ems="10"
-        android:hint="Price"
+        android:hint="weekday exercises"
         tools:ignore="TouchTargetSizeCheck" />
 
     <Button
         android:id="@+id/btnUp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:backgroundTint="#FF9800"
+        android:backgroundTint="#03A9F4"
         android:onClick="btnUp_Click"
         android:text="update" />
 </androidx.appcompat.widget.LinearLayoutCompat>
