--- a/app/src/main/res/layout/_member_ship_chooser.xml
+++ b/app/src/main/res/layout/_member_ship_chooser.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/LinearLayout"
@@ -8,86 +8,108 @@
     android:orientation="vertical"
     tools:context="._MemberShipChooser">
 
+
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="match_parent"
+        android:layout_width="412dp"
         android:layout_height="206dp"
+        android:layout_marginBottom="12dp"
+        app:layout_constraintBottom_toTopOf="@+id/textView9"
+        app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/mem" />
 
     <TextView
         android:id="@+id/textView9"
-        android:layout_width="match_parent"
-        android:layout_height="42dp"
+        android:layout_width="406dp"
+        android:layout_height="38dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="29dp"
         android:text="Our memberships :"
         android:textAlignment="center"
         android:textAllCaps="true"
-        android:textColor="#03A9F4"
+        android:textColor="#050B0E"
         android:textSize="18dp"
         android:textStyle="bold|italic"
-        tools:layout_editor_absoluteX="4dp"
-        tools:layout_editor_absoluteY="387dp" />
+        app:layout_constraintBottom_toTopOf="@+id/spinner2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Spinner
         android:id="@+id/spinner2"
         android:layout_width="286dp"
         android:layout_height="57dp"
-        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck"
-        tools:layout_editor_absoluteX="55dp"
-        tools:layout_editor_absoluteY="442dp" />
+        android:layout_marginStart="62dp"
+        android:layout_marginEnd="63dp"
+        android:layout_marginBottom="18dp"
+        app:layout_constraintBottom_toTopOf="@+id/textView13"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
 
     <TextView
         android:id="@+id/textView11"
         android:layout_width="match_parent"
         android:layout_height="24dp"
+        android:layout_marginTop="8dp"
         android:text="Duration :"
         android:textAlignment="center"
         android:textAllCaps="true"
         android:textColor="#03A9F4"
         android:textSize="18dp"
         android:textStyle="bold|italic"
-        tools:layout_editor_absoluteX="5dp"
-        tools:layout_editor_absoluteY="495dp" />
+        app:layout_constraintTop_toBottomOf="@+id/textView10"
+        tools:layout_editor_absoluteX="6dp" />
 
     <TextView
         android:id="@+id/textView10"
         android:layout_width="match_parent"
         android:layout_height="45dp"
+        android:layout_marginTop="1dp"
         android:textSize="20sp"
-        tools:layout_editor_absoluteX="2dp"
-        tools:layout_editor_absoluteY="519dp" />
+        app:layout_constraintTop_toBottomOf="@+id/textView13"
+        tools:layout_editor_absoluteX="6dp" />
 
     <TextView
         android:id="@+id/textView13"
         android:layout_width="match_parent"
         android:layout_height="24dp"
-        android:text="the Price:"
+        android:layout_marginBottom="1dp"
+        android:text=" Price:"
         android:textAlignment="center"
         android:textAllCaps="true"
         android:textColor="#03A9F4"
         android:textSize="18dp"
         android:textStyle="bold|italic"
-        tools:layout_editor_absoluteX="5dp"
-        tools:layout_editor_absoluteY="495dp" />
+        app:layout_constraintBottom_toTopOf="@+id/textView10"
+        tools:layout_editor_absoluteX="6dp" />
 
     <TextView
         android:id="@+id/textView12"
         android:layout_width="match_parent"
         android:layout_height="45dp"
+        android:layout_marginTop="8dp"
         android:textSize="20sp"
-        tools:layout_editor_absoluteX="2dp"
-        tools:layout_editor_absoluteY="519dp" />
+        app:layout_constraintTop_toBottomOf="@+id/textView11"
+        tools:layout_editor_absoluteX="6dp" />
 
     <Button
         android:id="@+id/button4"
         android:layout_width="398dp"
         android:layout_height="wrap_content"
-        android:backgroundTint="#03A9F4"
+        android:layout_marginStart="6dp"
+        android:layout_marginTop="18dp"
+        android:layout_marginEnd="7dp"
+        android:backgroundTint="#081319"
         android:onClick="button4"
         android:text="continue"
         android:textColorHighlight="#03A9F4"
-        tools:layout_editor_absoluteX="150dp"
-        tools:layout_editor_absoluteY="677dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView12" />
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
 
 
