--- a/app/src/main/res/layout/_members_profile.xml
+++ b/app/src/main/res/layout/_members_profile.xml
@@ -1,9 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="._Members_Profile">
+    tools:context="._Members_Profile"
+    android:orientation="vertical">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <ImageView
+        android:id="@+id/imageView12"
+        android:layout_width="match_parent"
+        android:layout_height="160dp"
+        app:srcCompat="@drawable/memb"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="0dp" />
+
+    <TextView
+        android:id="@+id/textView18"
+        android:layout_width="150dp"
+        android:layout_height="43dp"
+        android:fontFamily="cursive"
+        android:text="MemberShip"
+        android:textColor="#2196F3"
+        android:textSize="24sp"
+        tools:fontFamily="serif"
+        tools:layout_editor_absoluteX="26dp"
+        tools:layout_editor_absoluteY="549dp" />
+
+    <TextView
+        android:id="@+id/textView16"
+        android:layout_width="349dp"
+        android:layout_height="95dp"
+        android:fontFamily="cursive"
+        android:textAlignment="center"
+        android:textColor="#FF9800"
+        android:textSize="34sp"
+        tools:fontFamily="serif-monospace"
+        tools:layout_editor_absoluteX="26dp"
+        tools:layout_editor_absoluteY="289dp" />
+
+    <TextView
+        android:id="@+id/textView15"
+        android:layout_width="254dp"
+        android:layout_height="38dp"
+        android:fontFamily="cursive"
+        android:text="your weekly program"
+        android:textColor="#2196F3"
+        android:textSize="24sp"
+        tools:fontFamily="serif"
+        tools:layout_editor_absoluteX="26dp"
+        tools:layout_editor_absoluteY="388dp" />
+
+    <TextView
+        android:id="@+id/textView17"
+        android:layout_width="match_parent"
+        android:layout_height="138dp"
+        android:fontFamily="serif"
+        android:textAlignment="center"
+        android:textColor="#030609"
+        android:textSize="16sp"
+        tools:fontFamily="serif"
+        tools:layout_editor_absoluteX="26dp"
+        tools:layout_editor_absoluteY="431dp" />
+
+    <TextView
+        android:id="@+id/textView14"
+        android:layout_width="207dp"
+        android:layout_height="43dp"
+        android:fontFamily="cursive"
+        android:text="your food program"
+        android:textColor="#2196F3"
+        android:textSize="24sp"
+        tools:fontFamily="serif"
+        tools:layout_editor_absoluteX="26dp"
+        tools:layout_editor_absoluteY="246dp" />
+
+    <TextView
+        android:id="@+id/textView19"
+        android:layout_width="349dp"
+        android:layout_height="77dp"
+        android:fontFamily="cursive"
+        android:textAlignment="center"
+        android:textColor="#030609"
+        android:textSize="34sp"
+        tools:fontFamily="serif-monospace"
+        tools:layout_editor_absoluteX="26dp"
+        tools:layout_editor_absoluteY="599dp" />
+
+</LinearLayout>
