--- a/app/src/main/res/layout/_workout_member.xml
+++ b/app/src/main/res/layout/_workout_member.xml
@@ -10,9 +10,10 @@
 
     <TextView
         android:id="@+id/textView11"
-        android:layout_width="205dp"
-        android:layout_height="24dp"
+        android:layout_width="207dp"
+        android:layout_height="22dp"
         android:layout_marginEnd="202dp"
+        android:paddingLeft="20dp"
         android:text="weekly exercises :"
         android:textAllCaps="true"
         android:textColor="#FF9800"
@@ -56,9 +57,10 @@
         android:layout_marginTop="7dp"
         android:layout_marginEnd="4dp"
         android:layout_marginBottom="5dp"
+        android:paddingLeft="20dp"
         android:text="We have many weekly training programs Choose a program that suits you"
         android:textAllCaps="true"
-        android:textColor="#FF9800"
+        android:textColor="#0C0905"
         android:textSize="18dp"
         android:textStyle="bold|italic"
         app:layout_constraintBottom_toTopOf="@+id/spinner2"
@@ -72,6 +74,7 @@
         android:layout_height="155dp"
         android:layout_marginStart="4dp"
         android:layout_marginEnd="11dp"
+        android:paddingLeft="20dp"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/button4"
         app:layout_constraintEnd_toEndOf="parent"
@@ -87,7 +90,7 @@
         android:layout_marginTop="3dp"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="6dp"
-        android:backgroundTint="#03A9F4"
+        android:backgroundTint="#091317"
         android:onClick="button4"
         android:text="continue"
         android:textColorHighlight="#03A9F4"
