--- a/app/src/main/res/layout/activity_add_offer.xml
+++ b/app/src/main/res/layout/activity_add_offer.xml
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="serif"
-        android:text="Add New Offer"
+        android:text="@string/add"
         android:textAlignment="center"
         android:textColor="#03A9F4"
         android:textSize="20sp"
@@ -56,5 +56,5 @@
         android:insetTop="20dp"
         android:insetRight="10dp"
         android:onClick="btnAdd_Click"
-        android:text="Add" />
+        android:text="@string/addadd" />
 </androidx.appcompat.widget.LinearLayoutCompat>
