--- a/app/src/main/res/layout/_gym.xml
+++ b/app/src/main/res/layout/_gym.xml
@@ -33,8 +33,8 @@
             android:layout_width="185dp"
             android:layout_height="59dp"
             android:layout_marginTop="26dp"
-            android:backgroundTint="#0D171C"
-            android:text="Employee"
+            android:backgroundTint="@color/DarkBlue"
+            android:text="@string/employee"
             android:textSize="16dp"
             android:textStyle="bold"
             app:layout_constraintTop_toBottomOf="@+id/imageView11"
@@ -48,7 +48,7 @@
             android:layout_marginTop="26dp"
             android:layout_marginEnd="48dp"
             android:backgroundTint="#09161C"
-            android:text="Member"
+            android:text="@string/member"
             android:textSize="16dp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
