--- a/app/src/main/res/layout/_member_ship_chooser.xml
+++ b/app/src/main/res/layout/_member_ship_chooser.xml
@@ -24,7 +24,7 @@
         android:layout_height="38dp"
         android:layout_marginEnd="5dp"
         android:layout_marginBottom="29dp"
-        android:text="Our memberships :"
+        android:text="@string/memberships"
         android:textAlignment="center"
         android:textAllCaps="true"
         android:textColor="#050B0E"
@@ -76,7 +76,7 @@
         android:layout_width="match_parent"
         android:layout_height="24dp"
         android:layout_marginBottom="1dp"
-        android:text=" Price:"
+        android:text="@string/price"
         android:textAlignment="center"
         android:textAllCaps="true"
         android:textColor="#03A9F4"
