--- a/app/src/main/res/layout/_nutritios_chooser.xml
+++ b/app/src/main/res/layout/_nutritios_chooser.xml
@@ -26,7 +26,7 @@
         android:layout_height="50dp"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="8dp"
-        android:text="We have many suggested nutrition programs "
+        android:text="@string/nutrition"
         android:textAlignment="center"
         android:textAllCaps="true"
         android:textColor="#19140D"
@@ -61,7 +61,7 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="58dp"
         android:layout_marginBottom="2dp"
-        android:text="Choose what suits you"
+        android:text="@string/suits"
         android:textAlignment="center"
         android:textAllCaps="true"
 
@@ -100,7 +100,7 @@
         android:layout_marginBottom="58dp"
         android:backgroundTint="#0C1317"
         android:onClick="button4"
-        android:text="continue"
+        android:text="@string/con"
         android:textColorHighlight="#03A9F4"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
