--- a/app/src/main/res/layout/activity_employee_part.xml
+++ b/app/src/main/res/layout/activity_employee_part.xml
@@ -22,7 +22,7 @@
         android:layout_marginEnd="35dp"
         android:backgroundTint="#03A9F4"
         android:onClick="Manage_Members"
-        android:text="Manage members informations"
+        android:text="@string/manage"
         android:textSize="16dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
