--- a/app/src/main/res/layout/activity_employee_part.xml
+++ b/app/src/main/res/layout/activity_employee_part.xml
@@ -20,11 +20,9 @@
         android:layout_height="70dp"
         android:layout_marginStart="35dp"
         android:layout_marginEnd="35dp"
-        android:backgroundTint="#03A9F4"
+        android:theme="@style/gym"
         android:onClick="Manage_Members"
         android:text="@string/manage"
-        android:textSize="16dp"
-        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -37,11 +35,9 @@
         android:layout_marginStart="35dp"
         android:layout_marginTop="19dp"
         android:layout_marginEnd="35dp"
-        android:backgroundTint="#03A9F4"
+        android:theme="@style/gym"
         android:onClick="Manage_MemberShip"
         android:text="Manage memberships Offers"
-        android:textSize="16dp"
-        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button" />
@@ -53,11 +49,9 @@
         android:layout_marginStart="35dp"
         android:layout_marginTop="27dp"
         android:layout_marginEnd="35dp"
-        android:backgroundTint="#03A9F4"
         android:onClick="Manage_workouts"
         android:text="manage workouts"
-        android:textSize="16dp"
-        android:textStyle="bold"
+        android:theme="@style/gym"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button2" />
@@ -69,11 +63,9 @@
         android:layout_marginStart="35dp"
         android:layout_marginTop="19dp"
         android:layout_marginEnd="35dp"
-        android:backgroundTint="#03A9F4"
+        android:theme="@style/gym"
         android:onClick="Manage_nutritionP"
         android:text="Our nutrition programs"
-        android:textSize="16dp"
-        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button3" />
