--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="DarkBlue">#0D171C</color>
+    <color name="Blue">    #03A9F4</color>
+    <color name="lightBlack">#09161C</color>
+
+
 </resources>
